--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ project.ext.ASSET_DIR = getProjectDir().toString() + '/assets'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.yeolabgt.mahmoodms.ecg2chdemo"
+        applicationId "com.yeolabgt.mahmoodms.eog2chdemo"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
