--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 // set to 'bazel', 'cmake', 'makefile', 'none'
-def nativeBuildSystem = 'none'
+def nativeBuildSystem = 'cmake'
 
 project.buildDir = 'gradleBuild'
 getProject().setBuildDir('gradleBuild')
@@ -23,11 +23,12 @@ project.ext.ASSET_DIR = getProjectDir().toString() + '/assets'
 //def cpuType = 'armeabi-v7a'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.yeolabgt.mahmoodms.eog2chdemo"
         minSdkVersion 22
-        targetSdkVersion 28
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -80,13 +81,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation files('libs/opencsv-3.7.jar')
     implementation project(':actblelibrary')
-    implementation 'com.androidplot:androidplot-core:1.5.4'
-    api 'com.google.guava:guava:27.0.1-android'
+    implementation 'com.androidplot:androidplot-core:1.5.1'
+    implementation 'com.google.guava:guava:23.0-android'
 
     //Original
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:preference-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:preference-v7:26.1.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -96,5 +97,7 @@ dependencies {
     if (nativeBuildSystem == 'cmake' || nativeBuildSystem == 'none') {
         implementation 'org.tensorflow:tensorflow-android:+'
     }
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    //Parrot Drones SDK
+    api 'com.parrot:arsdk:3.13.0'
 }
